@@ -39,7 +39,6 @@ import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -94,10 +93,11 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         var allowsCustomRouting = instance.isAllowCustomRouting();
         var indexMode = instance.getIndexMode();
         var lifecycle = instance.getLifecycle();
-        var failureStore = instance.isFailureStore();
+        var failureStore = instance.isFailureStoreEnabled();
         var failureIndices = instance.getFailureIndices();
+        var rolloverOnWrite = instance.rolloverOnWrite();
         var autoShardingEvent = instance.getAutoShardingEvent();
-        switch (between(0, 11)) {
+        switch (between(0, 12)) {
             case 0 -> name = randomAlphaOfLength(10);
             case 1 -> indices = randomNonEmptyIndexInstances();
             case 2 -> generation = instance.getGeneration() + randomIntBetween(1, 10);
@@ -110,7 +110,11 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
                     isHidden = true;
                 }
             }
-            case 5 -> isReplicated = isReplicated == false;
+            case 5 -> {
+                isReplicated = isReplicated == false;
+                // Replicated data streams cannot be marked for lazy rollover.
+                rolloverOnWrite = isReplicated == false && rolloverOnWrite;
+            }
             case 6 -> {
                 if (isSystem == false) {
                     isSystem = true;
@@ -131,6 +135,10 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
                 failureStore = failureIndices.isEmpty() == false;
             }
             case 11 -> {
+                rolloverOnWrite = rolloverOnWrite == false;
+                isReplicated = rolloverOnWrite == false && isReplicated;
+            }
+            case 12 -> {
                 autoShardingEvent = randomBoolean() && autoShardingEvent != null
                     ? null
                     : new DataStreamAutoShardingEvent(
@@ -154,6 +162,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             lifecycle,
             failureStore,
             failureIndices,
+            rolloverOnWrite,
             autoShardingEvent
         );
     }
@@ -167,6 +176,8 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         assertThat(rolledDs.getIndices().size(), equalTo(ds.getIndices().size() + 1));
         assertTrue(rolledDs.getIndices().containsAll(ds.getIndices()));
         assertTrue(rolledDs.getIndices().contains(rolledDs.getWriteIndex()));
+        // Irrespective of whether the rollover was performed lazily, rolloverOnWrite should always be set to false after rollover.
+        assertFalse(rolledDs.rolloverOnWrite());
     }
 
     public void testRolloverWithConflictingBackingIndexName() {
@@ -196,24 +207,11 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
     }
 
     public void testRolloverUpgradeToTsdbDataStream() {
-        IndexMode indexMode = randomBoolean() ? IndexMode.STANDARD : null;
-        DataStream ds = DataStreamTestHelper.randomInstance().promoteDataStream();
-        // Unsure index_mode=null
-        ds = new DataStream(
-            ds.getName(),
-            ds.getIndices(),
-            ds.getGeneration(),
-            ds.getMetadata(),
-            ds.isHidden(),
-            ds.isReplicated(),
-            ds.isSystem(),
-            ds.isAllowCustomRouting(),
-            indexMode,
-            ds.getLifecycle(),
-            ds.isFailureStore(),
-            ds.getFailureIndices(),
-            ds.getAutoShardingEvent()
-        );
+        DataStream ds = DataStreamTestHelper.randomInstance()
+            .copy()
+            .setReplicated(false)
+            .setIndexMode(randomBoolean() ? IndexMode.STANDARD : null)
+            .build();
         var newCoordinates = ds.nextWriteIndexAndGeneration(Metadata.EMPTY_METADATA);
 
         var rolledDs = ds.rollover(new Index(newCoordinates.v1(), UUIDs.randomBase64UUID()), newCoordinates.v2(), true, null);
@@ -226,22 +224,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
     }
 
     public void testRolloverDowngradeToRegularDataStream() {
-        DataStream ds = DataStreamTestHelper.randomInstance().promoteDataStream();
-        ds = new DataStream(
-            ds.getName(),
-            ds.getIndices(),
-            ds.getGeneration(),
-            ds.getMetadata(),
-            ds.isHidden(),
-            ds.isReplicated(),
-            ds.isSystem(),
-            ds.isAllowCustomRouting(),
-            IndexMode.TIME_SERIES,
-            ds.getLifecycle(),
-            ds.isFailureStore(),
-            ds.getFailureIndices(),
-            ds.getAutoShardingEvent()
-        );
+        DataStream ds = DataStreamTestHelper.randomInstance().copy().setReplicated(false).setIndexMode(IndexMode.TIME_SERIES).build();
         var newCoordinates = ds.nextWriteIndexAndGeneration(Metadata.EMPTY_METADATA);
 
         var rolledDs = ds.rollover(new Index(newCoordinates.v1(), UUIDs.randomBase64UUID()), newCoordinates.v2(), false, null);
@@ -253,57 +236,52 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         assertThat(rolledDs.getIndexMode(), nullValue());
     }
 
-    public void testRemoveBackingIndex() {
-        int numBackingIndices = randomIntBetween(2, 32);
-        int indexToRemove = randomIntBetween(1, numBackingIndices - 1);
-        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
+    public void testRolloverFailureStore() {
+        DataStream ds = DataStreamTestHelper.randomInstance(true).promoteDataStream();
+        Tuple<String, Long> newCoordinates = ds.nextFailureStoreWriteIndexAndGeneration(Metadata.EMPTY_METADATA);
+        final DataStream rolledDs = ds.rolloverFailureStore(new Index(newCoordinates.v1(), UUIDs.randomBase64UUID()), newCoordinates.v2());
+        assertThat(rolledDs.getName(), equalTo(ds.getName()));
+        assertThat(rolledDs.getGeneration(), equalTo(ds.getGeneration() + 1));
+        assertThat(rolledDs.getIndices().size(), equalTo(ds.getIndices().size()));
+        // Ensure that the rolloverOnWrite flag hasn't changed when rolling over a failure store.
+        assertThat(rolledDs.rolloverOnWrite(), equalTo(ds.rolloverOnWrite()));
+        assertThat(rolledDs.getFailureIndices().size(), equalTo(ds.getFailureIndices().size() + 1));
+        assertTrue(rolledDs.getIndices().containsAll(ds.getIndices()));
+        assertTrue(rolledDs.getIndices().contains(rolledDs.getWriteIndex()));
+        assertTrue(rolledDs.getFailureIndices().containsAll(ds.getFailureIndices()));
+        assertTrue(rolledDs.getFailureIndices().contains(rolledDs.getFailureStoreWriteIndex()));
+    }
 
-        List<Index> indices = new ArrayList<>(numBackingIndices);
-        for (int k = 1; k <= numBackingIndices; k++) {
-            indices.add(new Index(DataStream.getDefaultBackingIndexName(dataStreamName, k), UUIDs.randomBase64UUID(random())));
-        }
-        DataStream original = DataStreamTestHelper.newInstance(dataStreamName, indices);
-        DataStream updated = original.removeBackingIndex(indices.get(indexToRemove - 1));
+    public void testRemoveBackingIndex() {
+        DataStream original = createRandomDataStream();
+        int indexToRemove = randomIntBetween(1, original.getIndices().size() - 1);
+
+        DataStream updated = original.removeBackingIndex(original.getIndices().get(indexToRemove - 1));
         assertThat(updated.getName(), equalTo(original.getName()));
         assertThat(updated.getGeneration(), equalTo(original.getGeneration() + 1));
-        assertThat(updated.getIndices().size(), equalTo(numBackingIndices - 1));
-        for (int k = 0; k < (numBackingIndices - 1); k++) {
+        assertThat(updated.getIndices().size(), equalTo(original.getIndices().size() - 1));
+        for (int k = 0; k < (original.getIndices().size() - 1); k++) {
             assertThat(updated.getIndices().get(k), equalTo(original.getIndices().get(k < (indexToRemove - 1) ? k : k + 1)));
         }
     }
 
     public void testRemoveBackingIndexThatDoesNotExist() {
-        int numBackingIndices = randomIntBetween(2, 32);
-        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-
-        List<Index> indices = new ArrayList<>(numBackingIndices);
-        for (int k = 1; k <= numBackingIndices; k++) {
-            indices.add(new Index(DataStream.getDefaultBackingIndexName(dataStreamName, k), UUIDs.randomBase64UUID(random())));
-        }
-        DataStream original = DataStreamTestHelper.newInstance(dataStreamName, indices);
-
+        DataStream original = createRandomDataStream();
         final Index indexToRemove = new Index(randomAlphaOfLength(4), UUIDs.randomBase64UUID(random()));
 
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> original.removeBackingIndex(indexToRemove));
         assertThat(
             e.getMessage(),
-            equalTo(Strings.format("index [%s] is not part of data stream [%s]", indexToRemove.getName(), dataStreamName))
+            equalTo(Strings.format("index [%s] is not part of data stream [%s]", indexToRemove.getName(), original.getName()))
         );
     }
 
     public void testRemoveBackingWriteIndex() {
-        int numBackingIndices = randomIntBetween(2, 32);
-        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-
-        List<Index> indices = new ArrayList<>(numBackingIndices);
-        for (int k = 1; k <= numBackingIndices; k++) {
-            indices.add(new Index(DataStream.getDefaultBackingIndexName(dataStreamName, k), UUIDs.randomBase64UUID(random())));
-        }
-        DataStream original = DataStreamTestHelper.newInstance(dataStreamName, indices);
+        DataStream original = createRandomDataStream();
 
         IllegalArgumentException e = expectThrows(
             IllegalArgumentException.class,
-            () -> original.removeBackingIndex(indices.get(numBackingIndices - 1))
+            () -> original.removeBackingIndex(original.getIndices().get(original.getIndices().size() - 1))
         );
         assertThat(
             e.getMessage(),
@@ -311,34 +289,66 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
                 String.format(
                     Locale.ROOT,
                     "cannot remove backing index [%s] of data stream [%s] because it is the write index",
-                    indices.get(numBackingIndices - 1).getName(),
-                    dataStreamName
+                    original.getIndices().get(original.getIndices().size() - 1).getName(),
+                    original.getName()
+                )
+            )
+        );
+    }
+
+    public void testRemoveFailureStoreIndex() {
+        DataStream original = createRandomDataStream();
+        int indexToRemove = randomIntBetween(1, original.getFailureIndices().size() - 1);
+
+        DataStream updated = original.removeFailureStoreIndex(original.getFailureIndices().get(indexToRemove - 1));
+        assertThat(updated.getName(), equalTo(original.getName()));
+        assertThat(updated.getGeneration(), equalTo(original.getGeneration() + 1));
+        assertThat(updated.getIndices().size(), equalTo(original.getIndices().size()));
+        assertThat(updated.getFailureIndices().size(), equalTo(original.getFailureIndices().size() - 1));
+        for (int k = 0; k < (original.getFailureIndices().size() - 1); k++) {
+            assertThat(updated.getFailureIndices().get(k), equalTo(original.getFailureIndices().get(k < (indexToRemove - 1) ? k : k + 1)));
+        }
+    }
+
+    public void testRemoveFailureStoreIndexThatDoesNotExist() {
+        DataStream original = createRandomDataStream();
+        final Index indexToRemove = new Index(randomAlphaOfLength(4), UUIDs.randomBase64UUID(random()));
+
+        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> original.removeFailureStoreIndex(indexToRemove));
+        assertThat(
+            e.getMessage(),
+            equalTo(Strings.format("index [%s] is not part of data stream [%s] failure store", indexToRemove.getName(), original.getName()))
+        );
+    }
+
+    public void testRemoveFailureStoreWriteIndex() {
+        DataStream original = createRandomDataStream();
+
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> original.removeFailureStoreIndex(original.getFailureIndices().get(original.getFailureIndices().size() - 1))
+        );
+        assertThat(
+            e.getMessage(),
+            equalTo(
+                String.format(
+                    Locale.ROOT,
+                    "cannot remove backing index [%s] of data stream [%s] because it is the write index",
+                    original.getFailureIndices().get(original.getFailureIndices().size() - 1).getName(),
+                    original.getName()
                 )
             )
         );
     }
 
     public void testAddBackingIndex() {
-        int numBackingIndices = randomIntBetween(2, 32);
-        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-        final long epochMillis = System.currentTimeMillis();
-
-        List<Index> indices = new ArrayList<>(numBackingIndices);
-        for (int k = 1; k <= numBackingIndices; k++) {
-            indices.add(new Index(DataStream.getDefaultBackingIndexName(dataStreamName, k, epochMillis), UUIDs.randomBase64UUID(random())));
-        }
-
         Metadata.Builder builder = Metadata.builder();
-        for (int k = 1; k <= numBackingIndices; k++) {
-            IndexMetadata im = IndexMetadata.builder(indices.get(k - 1).getName())
-                .settings(settings(IndexVersion.current()))
-                .numberOfShards(1)
-                .numberOfReplicas(1)
-                .build();
-            builder.put(im, false);
-        }
-        DataStream original = DataStreamTestHelper.newInstance(dataStreamName, indices);
+
+        DataStream original = createRandomDataStream();
         builder.put(original);
+
+        createMetadataForIndices(builder, original.getIndices());
+
         Index indexToAdd = new Index(randomAlphaOfLength(4), UUIDs.randomBase64UUID(random()));
         builder.put(
             IndexMetadata.builder(indexToAdd.getName())
@@ -352,48 +362,28 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         DataStream updated = original.addBackingIndex(builder.build(), indexToAdd);
         assertThat(updated.getName(), equalTo(original.getName()));
         assertThat(updated.getGeneration(), equalTo(original.getGeneration() + 1));
-        assertThat(updated.getIndices().size(), equalTo(numBackingIndices + 1));
-        for (int k = 1; k <= numBackingIndices; k++) {
+        assertThat(updated.getIndices().size(), equalTo(original.getIndices().size() + 1));
+        for (int k = 1; k <= original.getIndices().size(); k++) {
             assertThat(updated.getIndices().get(k), equalTo(original.getIndices().get(k - 1)));
         }
         assertThat(updated.getIndices().get(0), equalTo(indexToAdd));
     }
 
     public void testAddBackingIndexThatIsPartOfAnotherDataStream() {
-        int numBackingIndices = randomIntBetween(2, 32);
-        final String dsName1 = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-        final String dsName2 = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-
-        final long epochMillis = System.currentTimeMillis();
-
-        List<Index> indices1 = new ArrayList<>(numBackingIndices);
-        List<Index> indices2 = new ArrayList<>(numBackingIndices);
-        for (int k = 1; k <= numBackingIndices; k++) {
-            indices1.add(new Index(DataStream.getDefaultBackingIndexName(dsName1, k, epochMillis), UUIDs.randomBase64UUID(random())));
-            indices2.add(new Index(DataStream.getDefaultBackingIndexName(dsName2, k, epochMillis), UUIDs.randomBase64UUID(random())));
-        }
-
         Metadata.Builder builder = Metadata.builder();
-        for (int k = 1; k <= numBackingIndices; k++) {
-            IndexMetadata im = IndexMetadata.builder(indices1.get(k - 1).getName())
-                .settings(settings(IndexVersion.current()))
-                .numberOfShards(1)
-                .numberOfReplicas(1)
-                .build();
-            builder.put(im, false);
-            im = IndexMetadata.builder(indices2.get(k - 1).getName())
-                .settings(settings(IndexVersion.current()))
-                .numberOfShards(1)
-                .numberOfReplicas(1)
-                .build();
-            builder.put(im, false);
-        }
-        DataStream ds1 = DataStreamTestHelper.newInstance(dsName1, indices1);
-        DataStream ds2 = DataStreamTestHelper.newInstance(dsName2, indices2);
+
+        DataStream ds1 = createRandomDataStream();
+        DataStream ds2 = createRandomDataStream();
+
         builder.put(ds1);
         builder.put(ds2);
 
-        Index indexToAdd = randomFrom(indices2.toArray(Index.EMPTY_ARRAY));
+        createMetadataForIndices(builder, ds1.getIndices());
+        createMetadataForIndices(builder, ds1.getFailureIndices());
+        createMetadataForIndices(builder, ds2.getIndices());
+        createMetadataForIndices(builder, ds2.getFailureIndices());
+
+        Index indexToAdd = randomFrom(ds2.getIndices().toArray(Index.EMPTY_ARRAY));
 
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> ds1.addBackingIndex(builder.build(), indexToAdd));
         assertThat(
@@ -410,59 +400,62 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         );
     }
 
-    public void testAddExistingBackingIndex() {
-        int numBackingIndices = randomIntBetween(2, 32);
-        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-        final long epochMillis = System.currentTimeMillis();
-
-        List<Index> indices = new ArrayList<>(numBackingIndices);
-        for (int k = 1; k <= numBackingIndices; k++) {
-            indices.add(new Index(DataStream.getDefaultBackingIndexName(dataStreamName, k, epochMillis), UUIDs.randomBase64UUID(random())));
-        }
-
+    public void testAddBackingIndexThatIsPartOfDataStreamFailureStore() {
         Metadata.Builder builder = Metadata.builder();
-        for (int k = 1; k <= numBackingIndices; k++) {
-            IndexMetadata im = IndexMetadata.builder(indices.get(k - 1).getName())
-                .settings(settings(IndexVersion.current()))
-                .numberOfShards(1)
-                .numberOfReplicas(1)
-                .build();
-            builder.put(im, false);
-        }
-        DataStream original = DataStreamTestHelper.newInstance(dataStreamName, indices);
+
+        DataStream ds1 = createRandomDataStream();
+        DataStream ds2 = createRandomDataStream();
+        builder.put(ds1);
+        builder.put(ds2);
+
+        createMetadataForIndices(builder, ds1.getIndices());
+        createMetadataForIndices(builder, ds1.getFailureIndices());
+        createMetadataForIndices(builder, ds2.getIndices());
+        createMetadataForIndices(builder, ds2.getFailureIndices());
+
+        Index indexToAdd = randomFrom(ds2.getFailureIndices().toArray(Index.EMPTY_ARRAY));
+
+        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> ds1.addBackingIndex(builder.build(), indexToAdd));
+        assertThat(
+            e.getMessage(),
+            equalTo(
+                String.format(
+                    Locale.ROOT,
+                    "cannot add index [%s] to data stream [%s] because it is already a failure store index on data stream [%s]",
+                    indexToAdd.getName(),
+                    ds1.getName(),
+                    ds2.getName()
+                )
+            )
+        );
+    }
+
+    public void testAddExistingBackingIndex() {
+        Metadata.Builder builder = Metadata.builder();
+
+        DataStream original = createRandomDataStream();
         builder.put(original);
-        Index indexToAdd = randomFrom(indices.toArray(Index.EMPTY_ARRAY));
+
+        createMetadataForIndices(builder, original.getIndices());
+
+        Index indexToAdd = randomFrom(original.getIndices().toArray(Index.EMPTY_ARRAY));
 
         DataStream updated = original.addBackingIndex(builder.build(), indexToAdd);
         assertThat(updated.getName(), equalTo(original.getName()));
         assertThat(updated.getGeneration(), equalTo(original.getGeneration()));
-        assertThat(updated.getIndices().size(), equalTo(numBackingIndices));
-        for (int k = 0; k < numBackingIndices; k++) {
+        assertThat(updated.getIndices().size(), equalTo(original.getIndices().size()));
+        for (int k = 0; k < original.getIndices().size(); k++) {
             assertThat(updated.getIndices().get(k), equalTo(original.getIndices().get(k)));
         }
     }
 
     public void testAddBackingIndexWithAliases() {
-        int numBackingIndices = randomIntBetween(2, 32);
-        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-        final long epochMillis = System.currentTimeMillis();
-
-        List<Index> indices = new ArrayList<>(numBackingIndices);
-        for (int k = 1; k <= numBackingIndices; k++) {
-            indices.add(new Index(DataStream.getDefaultBackingIndexName(dataStreamName, k, epochMillis), UUIDs.randomBase64UUID(random())));
-        }
-
         Metadata.Builder builder = Metadata.builder();
-        for (int k = 1; k <= numBackingIndices; k++) {
-            IndexMetadata im = IndexMetadata.builder(indices.get(k - 1).getName())
-                .settings(settings(IndexVersion.current()))
-                .numberOfShards(1)
-                .numberOfReplicas(1)
-                .build();
-            builder.put(im, false);
-        }
-        DataStream original = DataStreamTestHelper.newInstance(dataStreamName, indices);
+
+        DataStream original = createRandomDataStream();
         builder.put(original);
+
+        createMetadataForIndices(builder, original.getIndices());
 
         Index indexToAdd = new Index(randomAlphaOfLength(4), UUIDs.randomBase64UUID(random()));
         IndexMetadata.Builder b = IndexMetadata.builder(indexToAdd.getName())
@@ -487,10 +480,170 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             equalTo(
                 String.format(
                     Locale.ROOT,
-                    "cannot add index [%s] to data stream [%s] until its alias(es) [%s] are removed",
+                    "cannot add index [%s] to data stream [%s] until its %s [%s] %s removed",
                     indexToAdd.getName(),
                     original.getName(),
-                    Strings.arrayToCommaDelimitedString(aliasNames)
+                    numAliases > 1 ? "aliases" : "alias",
+                    Strings.arrayToCommaDelimitedString(aliasNames),
+                    numAliases > 1 ? "are" : "is"
+                )
+            )
+        );
+    }
+
+    public void testAddFailureStoreIndex() {
+        Metadata.Builder builder = Metadata.builder();
+
+        DataStream original = createRandomDataStream();
+        builder.put(original);
+
+        createMetadataForIndices(builder, original.getIndices());
+        createMetadataForIndices(builder, original.getFailureIndices());
+
+        Index indexToAdd = new Index(randomAlphaOfLength(4), UUIDs.randomBase64UUID(random()));
+        builder.put(
+            IndexMetadata.builder(indexToAdd.getName())
+                .settings(settings(IndexVersion.current()))
+                .numberOfShards(1)
+                .numberOfReplicas(1)
+                .build(),
+            false
+        );
+
+        DataStream updated = original.addFailureStoreIndex(builder.build(), indexToAdd);
+        assertThat(updated.getName(), equalTo(original.getName()));
+        assertThat(updated.getGeneration(), equalTo(original.getGeneration() + 1));
+        assertThat(updated.getIndices().size(), equalTo(original.getIndices().size()));
+        assertThat(updated.getFailureIndices().size(), equalTo(original.getFailureIndices().size() + 1));
+        for (int k = 1; k <= original.getFailureIndices().size(); k++) {
+            assertThat(updated.getFailureIndices().get(k), equalTo(original.getFailureIndices().get(k - 1)));
+        }
+        assertThat(updated.getFailureIndices().get(0), equalTo(indexToAdd));
+    }
+
+    public void testAddFailureStoreIndexThatIsPartOfAnotherDataStream() {
+        Metadata.Builder builder = Metadata.builder();
+
+        DataStream ds1 = createRandomDataStream();
+        DataStream ds2 = createRandomDataStream();
+        builder.put(ds1);
+        builder.put(ds2);
+
+        createMetadataForIndices(builder, ds1.getIndices());
+        createMetadataForIndices(builder, ds1.getFailureIndices());
+        createMetadataForIndices(builder, ds2.getIndices());
+        createMetadataForIndices(builder, ds2.getFailureIndices());
+
+        Index indexToAdd = randomFrom(ds2.getFailureIndices().toArray(Index.EMPTY_ARRAY));
+
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> ds1.addFailureStoreIndex(builder.build(), indexToAdd)
+        );
+        assertThat(
+            e.getMessage(),
+            equalTo(
+                String.format(
+                    Locale.ROOT,
+                    "cannot add index [%s] to data stream [%s] because it is already a failure store index on data stream [%s]",
+                    indexToAdd.getName(),
+                    ds1.getName(),
+                    ds2.getName()
+                )
+            )
+        );
+    }
+
+    public void testAddFailureStoreIndexThatIsPartOfDataStreamBackingIndices() {
+        Metadata.Builder builder = Metadata.builder();
+
+        DataStream ds1 = createRandomDataStream();
+        DataStream ds2 = createRandomDataStream();
+        builder.put(ds1);
+        builder.put(ds2);
+
+        createMetadataForIndices(builder, ds1.getIndices());
+        createMetadataForIndices(builder, ds1.getFailureIndices());
+        createMetadataForIndices(builder, ds2.getIndices());
+        createMetadataForIndices(builder, ds2.getFailureIndices());
+
+        Index indexToAdd = randomFrom(ds2.getIndices().toArray(Index.EMPTY_ARRAY));
+
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> ds1.addFailureStoreIndex(builder.build(), indexToAdd)
+        );
+        assertThat(
+            e.getMessage(),
+            equalTo(
+                String.format(
+                    Locale.ROOT,
+                    "cannot add index [%s] to data stream [%s] because it is already a backing index on data stream [%s]",
+                    indexToAdd.getName(),
+                    ds1.getName(),
+                    ds2.getName()
+                )
+            )
+        );
+    }
+
+    public void testAddExistingFailureStoreIndex() {
+        Metadata.Builder builder = Metadata.builder();
+
+        DataStream original = createRandomDataStream();
+        builder.put(original);
+
+        createMetadataForIndices(builder, original.getIndices());
+        createMetadataForIndices(builder, original.getFailureIndices());
+
+        Index indexToAdd = randomFrom(original.getFailureIndices().toArray(Index.EMPTY_ARRAY));
+
+        DataStream updated = original.addFailureStoreIndex(builder.build(), indexToAdd);
+        assertThat(updated.getName(), equalTo(original.getName()));
+        assertThat(updated.getGeneration(), equalTo(original.getGeneration()));
+        assertThat(updated.getIndices().size(), equalTo(original.getIndices().size()));
+        assertThat(updated.getFailureIndices().size(), equalTo(original.getFailureIndices().size()));
+        assertThat(updated.getFailureIndices(), equalTo(original.getFailureIndices()));
+    }
+
+    public void testAddFailureStoreIndexWithAliases() {
+        Metadata.Builder builder = Metadata.builder();
+
+        DataStream original = createRandomDataStream();
+        builder.put(original);
+
+        createMetadataForIndices(builder, original.getIndices());
+        createMetadataForIndices(builder, original.getFailureIndices());
+
+        Index indexToAdd = new Index(randomAlphaOfLength(4), UUIDs.randomBase64UUID(random()));
+        IndexMetadata.Builder b = IndexMetadata.builder(indexToAdd.getName())
+            .settings(settings(IndexVersion.current()))
+            .numberOfShards(1)
+            .numberOfReplicas(1);
+        final int numAliases = randomIntBetween(1, 3);
+        final String[] aliasNames = new String[numAliases];
+        for (int k = 0; k < numAliases; k++) {
+            aliasNames[k] = randomAlphaOfLength(6);
+            b.putAlias(AliasMetadata.builder(aliasNames[k]));
+        }
+        builder.put(b.build(), false);
+        Arrays.sort(aliasNames);
+
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> original.addFailureStoreIndex(builder.build(), indexToAdd)
+        );
+        assertThat(
+            e.getMessage(),
+            equalTo(
+                String.format(
+                    Locale.ROOT,
+                    "cannot add index [%s] to data stream [%s] until its %s [%s] %s removed",
+                    indexToAdd.getName(),
+                    original.getName(),
+                    numAliases > 1 ? "aliases" : "alias",
+                    Strings.arrayToCommaDelimitedString(aliasNames),
+                    numAliases > 1 ? "are" : "is"
                 )
             )
         );
@@ -508,25 +661,30 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         assertThat(defaultBackingIndexName, equalTo(expectedBackingIndexName));
     }
 
-    public void testReplaceBackingIndex() {
-        int numBackingIndices = randomIntBetween(2, 32);
-        int indexToReplace = randomIntBetween(1, numBackingIndices - 1) - 1;
-        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
+    public void testDefaultFailureStoreName() {
+        // this test does little more than flag that changing the default naming convention for failure store indices
+        // will also require changing a lot of hard-coded values in REST tests and docs
+        long failureStoreIndexNum = randomLongBetween(1, 1000001);
+        String dataStreamName = randomAlphaOfLength(6);
+        long epochMillis = randomLongBetween(1580536800000L, 1583042400000L);
+        String dateString = DataStream.DATE_FORMATTER.formatMillis(epochMillis);
+        String defaultFailureStoreName = DataStream.getDefaultFailureStoreName(dataStreamName, failureStoreIndexNum, epochMillis);
+        String expectedFailureStoreName = Strings.format(".fs-%s-%s-%06d", dataStreamName, dateString, failureStoreIndexNum);
+        assertThat(defaultFailureStoreName, equalTo(expectedFailureStoreName));
+    }
 
-        List<Index> indices = new ArrayList<>(numBackingIndices);
-        for (int i = 1; i <= numBackingIndices; i++) {
-            indices.add(new Index(DataStream.getDefaultBackingIndexName(dataStreamName, i), UUIDs.randomBase64UUID(random())));
-        }
-        DataStream original = DataStreamTestHelper.newInstance(dataStreamName, indices);
+    public void testReplaceBackingIndex() {
+        DataStream original = createRandomDataStream();
+        int indexToReplace = randomIntBetween(1, original.getIndices().size() - 1) - 1;
 
         Index newBackingIndex = new Index("replacement-index", UUIDs.randomBase64UUID(random()));
-        DataStream updated = original.replaceBackingIndex(indices.get(indexToReplace), newBackingIndex);
+        DataStream updated = original.replaceBackingIndex(original.getIndices().get(indexToReplace), newBackingIndex);
         assertThat(updated.getName(), equalTo(original.getName()));
         assertThat(updated.getGeneration(), equalTo(original.getGeneration() + 1));
-        assertThat(updated.getIndices().size(), equalTo(numBackingIndices));
+        assertThat(updated.getIndices().size(), equalTo(original.getIndices().size()));
         assertThat(updated.getIndices().get(indexToReplace), equalTo(newBackingIndex));
 
-        for (int i = 0; i < numBackingIndices; i++) {
+        for (int i = 0; i < original.getIndices().size(); i++) {
             if (i != indexToReplace) {
                 assertThat(updated.getIndices().get(i), equalTo(original.getIndices().get(i)));
             }
@@ -534,14 +692,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
     }
 
     public void testReplaceBackingIndexThrowsExceptionIfIndexNotPartOfDataStream() {
-        int numBackingIndices = randomIntBetween(2, 32);
-        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
-
-        List<Index> indices = new ArrayList<>(numBackingIndices);
-        for (int i = 1; i <= numBackingIndices; i++) {
-            indices.add(new Index(DataStream.getDefaultBackingIndexName(dataStreamName, i), UUIDs.randomBase64UUID(random())));
-        }
-        DataStream original = DataStreamTestHelper.newInstance(dataStreamName, indices);
+        DataStream original = createRandomDataStream();
 
         Index standaloneIndex = new Index("index-foo", UUIDs.randomBase64UUID(random()));
         Index newBackingIndex = new Index("replacement-index", UUIDs.randomBase64UUID(random()));
@@ -590,21 +741,14 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         postSnapshotIndices.removeAll(indicesToRemove);
         postSnapshotIndices.addAll(indicesToAdd);
 
-        var postSnapshotDataStream = new DataStream(
-            preSnapshotDataStream.getName(),
-            postSnapshotIndices,
-            preSnapshotDataStream.getGeneration() + randomIntBetween(0, 5),
-            preSnapshotDataStream.getMetadata() == null ? null : new HashMap<>(preSnapshotDataStream.getMetadata()),
-            preSnapshotDataStream.isHidden(),
-            preSnapshotDataStream.isReplicated() && randomBoolean(),
-            preSnapshotDataStream.isSystem(),
-            preSnapshotDataStream.isAllowCustomRouting(),
-            preSnapshotDataStream.getIndexMode(),
-            preSnapshotDataStream.getLifecycle(),
-            preSnapshotDataStream.isFailureStore(),
-            preSnapshotDataStream.getFailureIndices(),
-            preSnapshotDataStream.getAutoShardingEvent()
-        );
+        var replicated = preSnapshotDataStream.isReplicated() && randomBoolean();
+        var postSnapshotDataStream = preSnapshotDataStream.copy()
+            .setIndices(postSnapshotIndices)
+            .setGeneration(preSnapshotDataStream.getGeneration() + randomIntBetween(0, 5))
+            .setMetadata(preSnapshotDataStream.getMetadata() == null ? null : new HashMap<>(preSnapshotDataStream.getMetadata()))
+            .setReplicated(replicated)
+            .setRolloverOnWrite(replicated == false && preSnapshotDataStream.rolloverOnWrite())
+            .build();
 
         var reconciledDataStream = postSnapshotDataStream.snapshot(
             preSnapshotDataStream.getIndices().stream().map(Index::getName).toList()
@@ -631,21 +775,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         var preSnapshotDataStream = DataStreamTestHelper.randomInstance();
         var indicesToAdd = randomNonEmptyIndexInstances();
 
-        var postSnapshotDataStream = new DataStream(
-            preSnapshotDataStream.getName(),
-            indicesToAdd,
-            preSnapshotDataStream.getGeneration(),
-            preSnapshotDataStream.getMetadata(),
-            preSnapshotDataStream.isHidden(),
-            preSnapshotDataStream.isReplicated(),
-            preSnapshotDataStream.isSystem(),
-            preSnapshotDataStream.isAllowCustomRouting(),
-            preSnapshotDataStream.getIndexMode(),
-            preSnapshotDataStream.getLifecycle(),
-            preSnapshotDataStream.isFailureStore(),
-            preSnapshotDataStream.getFailureIndices(),
-            preSnapshotDataStream.getAutoShardingEvent()
-        );
+        var postSnapshotDataStream = preSnapshotDataStream.copy().setIndices(indicesToAdd).build();
 
         assertNull(postSnapshotDataStream.snapshot(preSnapshotDataStream.getIndices().stream().map(Index::getName).toList()));
     }
@@ -864,17 +994,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
                 .numberOfReplicas(1)
                 .creationDate(creationTimeMillis);
             IndexMetadata indexMetadata = indexMetaBuilder.build();
-            DataStream dataStream = new DataStream(
-                dataStreamName,
-                List.of(indexMetadata.getIndex()),
-                1L,
-                Map.of(),
-                false,
-                randomBoolean(),
-                false,
-                randomBoolean(),
-                IndexMode.STANDARD
-            );
+            DataStream dataStream = createDataStream(dataStreamName, List.of(indexMetadata.getIndex()));
             assertNull(dataStream.getGenerationLifecycleDate(indexMetadata));
         }
 
@@ -894,16 +1014,9 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             MaxAgeCondition rolloverCondition = new MaxAgeCondition(TimeValue.timeValueMillis(rolloverTimeMills));
             indexMetaBuilder.putRolloverInfo(new RolloverInfo(dataStreamName, List.of(rolloverCondition), now - 2000L));
             IndexMetadata indexMetadata = indexMetaBuilder.build();
-            DataStream dataStream = new DataStream(
+            DataStream dataStream = createDataStream(
                 dataStreamName,
-                List.of(indexMetadata.getIndex(), writeIndexMetaBuilder.build().getIndex()),
-                1L,
-                Map.of(),
-                false,
-                randomBoolean(),
-                false,
-                randomBoolean(),
-                IndexMode.STANDARD
+                List.of(indexMetadata.getIndex(), writeIndexMetaBuilder.build().getIndex())
             );
             assertThat(dataStream.getGenerationLifecycleDate(indexMetadata).millis(), is(rolloverTimeMills));
         }
@@ -924,16 +1037,9 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             MaxAgeCondition rolloverCondition = new MaxAgeCondition(TimeValue.timeValueMillis(rolloverTimeMills));
             indexMetaBuilder.putRolloverInfo(new RolloverInfo("some-alias-name", List.of(rolloverCondition), now - 2000L));
             IndexMetadata indexMetadata = indexMetaBuilder.build();
-            DataStream dataStream = new DataStream(
+            DataStream dataStream = createDataStream(
                 dataStreamName,
-                List.of(indexMetadata.getIndex(), writeIndexMetaBuilder.build().getIndex()),
-                1L,
-                Map.of(),
-                false,
-                randomBoolean(),
-                false,
-                randomBoolean(),
-                IndexMode.STANDARD
+                List.of(indexMetadata.getIndex(), writeIndexMetaBuilder.build().getIndex())
             );
             assertThat(dataStream.getGenerationLifecycleDate(indexMetadata).millis(), is(creationTimeMillis));
         }
@@ -946,17 +1052,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
                 .numberOfReplicas(1)
                 .creationDate(creationTimeMillis);
             IndexMetadata indexMetadata = indexMetaBuilder.build();
-            DataStream dataStream = new DataStream(
-                dataStreamName,
-                List.of(indexMetadata.getIndex()),
-                1L,
-                Map.of(),
-                false,
-                randomBoolean(),
-                false,
-                randomBoolean(),
-                IndexMode.STANDARD
-            );
+            DataStream dataStream = createDataStream(dataStreamName, List.of(indexMetadata.getIndex()));
 
             assertNull(dataStream.getGenerationLifecycleDate(indexMetadata));
         }
@@ -975,16 +1071,9 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
                 .numberOfReplicas(1)
                 .creationDate(creationTimeMillis);
             IndexMetadata indexMetadata = indexMetaBuilder.build();
-            DataStream dataStream = new DataStream(
+            DataStream dataStream = createDataStream(
                 dataStreamName,
-                List.of(indexMetadata.getIndex(), writeIndexMetaBuilder.build().getIndex()),
-                1L,
-                Map.of(),
-                false,
-                randomBoolean(),
-                false,
-                randomBoolean(),
-                IndexMode.STANDARD
+                List.of(indexMetadata.getIndex(), writeIndexMetaBuilder.build().getIndex())
             );
             assertThat(dataStream.getGenerationLifecycleDate(indexMetadata).millis(), is(originTimeMillis));
         }
@@ -1005,16 +1094,9 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             MaxAgeCondition rolloverCondition = new MaxAgeCondition(TimeValue.timeValueMillis(rolloverTimeMills));
             indexMetaBuilder.putRolloverInfo(new RolloverInfo(dataStreamName, List.of(rolloverCondition), now - 2000L));
             IndexMetadata indexMetadata = indexMetaBuilder.build();
-            DataStream dataStream = new DataStream(
+            DataStream dataStream = createDataStream(
                 dataStreamName,
-                List.of(indexMetadata.getIndex(), writeIndexMetaBuilder.build().getIndex()),
-                1L,
-                Map.of(),
-                false,
-                randomBoolean(),
-                false,
-                randomBoolean(),
-                IndexMode.STANDARD
+                List.of(indexMetadata.getIndex(), writeIndexMetaBuilder.build().getIndex())
             );
             assertThat(dataStream.getGenerationLifecycleDate(indexMetadata).millis(), is(originTimeMillis));
         }
@@ -1035,19 +1117,21 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             MaxAgeCondition rolloverCondition = new MaxAgeCondition(TimeValue.timeValueMillis(rolloverTimeMills));
             indexMetaBuilder.putRolloverInfo(new RolloverInfo("some-alias-name", List.of(rolloverCondition), now - 2000L));
             IndexMetadata indexMetadata = indexMetaBuilder.build();
-            DataStream dataStream = new DataStream(
+            DataStream dataStream = createDataStream(
                 dataStreamName,
-                List.of(indexMetadata.getIndex(), writeIndexMetaBuilder.build().getIndex()),
-                1L,
-                Map.of(),
-                false,
-                randomBoolean(),
-                false,
-                randomBoolean(),
-                IndexMode.STANDARD
+                List.of(indexMetadata.getIndex(), writeIndexMetaBuilder.build().getIndex())
             );
             assertThat(dataStream.getGenerationLifecycleDate(indexMetadata).millis(), is(originTimeMillis));
         }
+    }
+
+    private DataStream createDataStream(String name, List<Index> indices) {
+        return DataStream.builder(name, indices)
+            .setMetadata(Map.of())
+            .setReplicated(randomBoolean())
+            .setAllowCustomRouting(randomBoolean())
+            .setIndexMode(IndexMode.STANDARD)
+            .build();
     }
 
     public void testGetIndicesOlderThan() {
@@ -1128,10 +1212,10 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         long now = System.currentTimeMillis();
 
         List<DataStreamMetadata> creationAndRolloverTimes = List.of(
-            DataStreamMetadata.dataStreamMetadata(now - 5000, now - 4000),
-            DataStreamMetadata.dataStreamMetadata(now - 4000, now - 3000),
-            DataStreamMetadata.dataStreamMetadata(now - 3000, now - 2000),
-            DataStreamMetadata.dataStreamMetadata(now - 2000, now - 1000),
+            DataStreamMetadata.dataStreamMetadata(now - 5000_000, now - 4000_000),
+            DataStreamMetadata.dataStreamMetadata(now - 4000_000, now - 3000_000),
+            DataStreamMetadata.dataStreamMetadata(now - 3000_000, now - 2000_000),
+            DataStreamMetadata.dataStreamMetadata(now - 2000_000, now - 1000_000),
             DataStreamMetadata.dataStreamMetadata(now, null)
         );
 
@@ -1153,8 +1237,8 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         {
             // no retention configured but we have default retention
             DataStreamGlobalRetention globalRetention = new DataStreamGlobalRetention(
-                TimeValue.timeValueMillis(2500),
-                randomBoolean() ? TimeValue.timeValueMillis(randomIntBetween(2500, 5000)) : null
+                TimeValue.timeValueSeconds(2500),
+                randomBoolean() ? TimeValue.timeValueSeconds(randomIntBetween(2500, 5000)) : null
             );
             Metadata.Builder builder = Metadata.builder();
             DataStream dataStream = createDataStream(
@@ -1174,7 +1258,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
 
         {
             // no retention configured but we have max retention
-            DataStreamGlobalRetention globalRetention = new DataStreamGlobalRetention(null, TimeValue.timeValueMillis(2500));
+            DataStreamGlobalRetention globalRetention = new DataStreamGlobalRetention(null, TimeValue.timeValueSeconds(2500));
             Metadata.Builder builder = Metadata.builder();
             DataStream dataStream = createDataStream(
                 builder,
@@ -1198,7 +1282,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
                 dataStreamName,
                 creationAndRolloverTimes,
                 settings(IndexVersion.current()),
-                DataStreamLifecycle.newBuilder().dataRetention(2500).build()
+                DataStreamLifecycle.newBuilder().dataRetention(TimeValue.timeValueSeconds(2500)).build()
             );
             Metadata metadata = builder.build();
 
@@ -1237,7 +1321,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
                 dataStreamName,
                 creationAndRolloverTimes,
                 settings(IndexVersion.current()),
-                DataStreamLifecycle.newBuilder().dataRetention(6000).build()
+                DataStreamLifecycle.newBuilder().dataRetention(TimeValue.timeValueSeconds(6000)).build()
             );
             Metadata metadata = builder.build();
 
@@ -1697,7 +1781,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         try (XContentBuilder builder = XContentBuilder.builder(XContentType.JSON.xContent())) {
             builder.humanReadable(true);
             RolloverConfiguration rolloverConfiguration = RolloverConfigurationTests.randomRolloverConditions();
-            DataStreamGlobalRetention globalRetention = DataStreamGlobalRetentionSerializationTests.randomGlobalRetention();
+            DataStreamGlobalRetention globalRetention = DataStreamGlobalRetentionTests.randomGlobalRetention();
 
             ToXContent.Params withEffectiveRetention = new ToXContent.MapParams(DataStreamLifecycle.INCLUDE_EFFECTIVE_RETENTION_PARAMS);
             dataStream.toXContent(builder, withEffectiveRetention, rolloverConfiguration, globalRetention);
@@ -1754,17 +1838,11 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         backingIndices.add(writeIndexMetadata.getIndex());
         metadataBuilder.put(writeIndexMetadata, false);
 
-        final DataStream dataStream = new DataStream(
-            dataStreamName,
-            backingIndices,
-            backingIndices.size(),
-            Collections.emptyMap(),
-            false,
-            false,
-            false,
-            false,
-            randomBoolean() ? IndexMode.STANDARD : IndexMode.TIME_SERIES
-        );
+        final DataStream dataStream = DataStream.builder(dataStreamName, backingIndices)
+            .setGeneration(backingIndices.size())
+            .setMetadata(Map.of())
+            .setIndexMode(randomBoolean() ? IndexMode.STANDARD : IndexMode.TIME_SERIES)
+            .build();
 
         metadataBuilder.put(dataStream);
 
@@ -1815,17 +1893,11 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         backingIndices.add(writeIndexMetadata.getIndex());
         metadataBuilder.put(writeIndexMetadata, false);
 
-        final DataStream dataStream = new DataStream(
-            dataStreamName,
-            backingIndices,
-            backingIndices.size(),
-            Collections.emptyMap(),
-            false,
-            false,
-            false,
-            false,
-            randomBoolean() ? IndexMode.STANDARD : IndexMode.TIME_SERIES
-        );
+        final DataStream dataStream = DataStream.builder(dataStreamName, backingIndices)
+            .setGeneration(backingIndices.size())
+            .setMetadata(Map.of())
+            .setIndexMode(randomBoolean() ? IndexMode.STANDARD : IndexMode.TIME_SERIES)
+            .build();
 
         metadataBuilder.put(dataStream);
 
@@ -1870,13 +1942,14 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
     public void testWriteFailureIndex() {
         boolean hidden = randomBoolean();
         boolean system = hidden && randomBoolean();
+        boolean replicated = randomBoolean();
         DataStream noFailureStoreDataStream = new DataStream(
             randomAlphaOfLength(10),
             randomNonEmptyIndexInstances(),
             randomNonNegativeInt(),
             null,
             hidden,
-            randomBoolean(),
+            replicated,
             system,
             System::currentTimeMillis,
             randomBoolean(),
@@ -1884,7 +1957,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             DataStreamLifecycleTests.randomLifecycle(),
             false,
             null,
-            randomBoolean(),
+            replicated == false && randomBoolean(),
             null
         );
         assertThat(noFailureStoreDataStream.getFailureStoreWriteIndex(), nullValue());
@@ -1895,7 +1968,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             randomNonNegativeInt(),
             null,
             hidden,
-            randomBoolean(),
+            replicated,
             system,
             System::currentTimeMillis,
             randomBoolean(),
@@ -1903,7 +1976,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             DataStreamLifecycleTests.randomLifecycle(),
             true,
             List.of(),
-            randomBoolean(),
+            replicated == false && randomBoolean(),
             null
         );
         assertThat(failureStoreDataStreamWithEmptyFailureIndices.getFailureStoreWriteIndex(), nullValue());
@@ -1921,7 +1994,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             randomNonNegativeInt(),
             null,
             hidden,
-            randomBoolean(),
+            replicated,
             system,
             System::currentTimeMillis,
             randomBoolean(),
@@ -1929,7 +2002,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             DataStreamLifecycleTests.randomLifecycle(),
             true,
             failureIndices,
-            randomBoolean(),
+            replicated == false && randomBoolean(),
             null
         );
         assertThat(failureStoreDataStream.getFailureStoreWriteIndex(), is(writeFailureIndex));
@@ -1939,13 +2012,14 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
         boolean hidden = randomBoolean();
         boolean system = hidden && randomBoolean();
         List<Index> backingIndices = randomNonEmptyIndexInstances();
+        boolean replicated = randomBoolean();
         DataStream noFailureStoreDataStream = new DataStream(
             randomAlphaOfLength(10),
             backingIndices,
             randomNonNegativeInt(),
             null,
             hidden,
-            randomBoolean(),
+            replicated,
             system,
             System::currentTimeMillis,
             randomBoolean(),
@@ -1953,7 +2027,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             DataStreamLifecycleTests.randomLifecycle(),
             false,
             null,
-            randomBoolean(),
+            replicated == false && randomBoolean(),
             null
         );
         assertThat(
@@ -1968,7 +2042,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             randomNonNegativeInt(),
             null,
             hidden,
-            randomBoolean(),
+            replicated,
             system,
             System::currentTimeMillis,
             randomBoolean(),
@@ -1976,7 +2050,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             DataStreamLifecycleTests.randomLifecycle(),
             true,
             List.of(),
-            randomBoolean(),
+            replicated == false && randomBoolean(),
             null
         );
         assertThat(
@@ -2000,7 +2074,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             randomNonNegativeInt(),
             null,
             hidden,
-            randomBoolean(),
+            replicated,
             system,
             System::currentTimeMillis,
             randomBoolean(),
@@ -2008,7 +2082,7 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             DataStreamLifecycleTests.randomLifecycle(),
             true,
             failureIndices,
-            randomBoolean(),
+            replicated == false && randomBoolean(),
             null
         );
         assertThat(failureStoreDataStream.isFailureStoreIndex(writeFailureIndex.getName()), is(true));
@@ -2036,6 +2110,36 @@ public class DataStreamTests extends AbstractXContentSerializingTestCase<DataStr
             Long originationTimeInMillis
         ) {
             return new DataStreamMetadata(creationTimeInMillis, rolloverTimeInMillis, originationTimeInMillis);
+        }
+    }
+
+    private static DataStream createRandomDataStream() {
+        long currentTimeMillis = System.currentTimeMillis();
+        int numBackingIndices = randomIntBetween(2, 32);
+        int numFailureIndices = randomIntBetween(2, 32);
+        String dataStreamName = randomAlphaOfLength(10).toLowerCase(Locale.ROOT);
+
+        List<Index> indices = new ArrayList<>(numBackingIndices);
+        for (int k = 1; k <= numBackingIndices; k++) {
+            indices.add(new Index(DataStream.getDefaultBackingIndexName(dataStreamName, k), UUIDs.randomBase64UUID(random())));
+        }
+        List<Index> failureIndices = new ArrayList<>(numFailureIndices);
+        for (int k = 1; k <= numFailureIndices; k++) {
+            failureIndices.add(
+                new Index(DataStream.getDefaultFailureStoreName(dataStreamName, k, currentTimeMillis), UUIDs.randomBase64UUID(random()))
+            );
+        }
+        return DataStreamTestHelper.newInstance(dataStreamName, indices, failureIndices);
+    }
+
+    private static void createMetadataForIndices(Metadata.Builder builder, List<Index> indices) {
+        for (Index index : indices) {
+            IndexMetadata im = IndexMetadata.builder(index.getName())
+                .settings(settings(IndexVersion.current()))
+                .numberOfShards(1)
+                .numberOfReplicas(1)
+                .build();
+            builder.put(im, false);
         }
     }
 }
